crates/oxide-code/src/tui/components/snapshots/ox__tui__components__input__tests__render_disabled_dims_style_and_hides_cursor_row.snap
---
source: crates/oxide-code/src/tui/components/input.rs
expression: "render_to_backend(&input, 60, 3)"
---
"────────────────────────────────────────────────────────────"
"pending                                                     "
"Enter: send │ Shift+Enter: newline │ Ctrl+C: quit           "
