crates/oxide-code/src/tui/components/snapshots/ox__tui__components__input__tests__render_empty_shows_placeholder.snap
---
source: crates/oxide-code/src/tui/components/input.rs
assertion_line: 697
expression: "render_to_backend(&input, 60, 3)"
---
"────────────────────────────────────────────────────────────"
"❯ Ask anything...                                           "
"────────────────────────────────────────────────────────────"
