crates/oxide-code/src/tui/components/snapshots/ox__tui__components__input__tests__render_empty_shows_placeholder_and_hint_line.snap
---
source: crates/oxide-code/src/tui/components/input.rs
expression: "render_to_backend(&input, 60, 3)"
---
"────────────────────────────────────────────────────────────"
" Ask anything...                                            "
"Enter: send │ Shift+Enter: newline │ Ctrl+C: quit           "
