crates/oxide-code/src/tui/components/snapshots/ox__tui__components__input__tests__render_long_line_wraps_and_engages_scroll_offset.snap
---
source: crates/oxide-code/src/tui/components/input.rs
expression: "render_to_backend(&input, 30, 5)"
---
"──────────────────────────────"
"a long input that overflows a "
"narrow terminal and forces the"
" textarea to wrap             "
"                              "
