crates/oxide-code/src/tui/components/snapshots/ox__tui__components__input__tests__render_multiline_grows_textarea_region.snap
---
source: crates/oxide-code/src/tui/components/input.rs
expression: "render_to_backend(&input, 60, input.height())"
---
"────────────────────────────────────────────────────────────"
"line 1                                                      "
"line 2                                                      "
"line 3                                                      "
