crates/oxide-code/src/tui/components/snapshots/ox__tui__components__input__tests__render_with_text_shows_typed_content.snap
---
source: crates/oxide-code/src/tui/components/input.rs
expression: "render_to_backend(&input, 60, 3)"
---
"────────────────────────────────────────────────────────────"
"hello world                                                 "
"                                                            "
